# GitManager

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: release.yml
src/: app.rs  git_ops.rs  main.rs  recent.rs  updater.rs
src/ui/: branch_panel.rs  log_panel.rs  mod.rs  remote_panel.rs  stash_panel.rs  status_panel.rs  worktree_panel.rs
tests/: git_ops_test.rs  release_workflow_test.rs
